--- a/.github/workflows/trivy-scan.yaml
+++ b/.github/workflows/trivy-scan.yaml
@@ -19,7 +19,7 @@ jobs:
           scan-type: 'config'
           hide-progress: true
           format: 'sarif'
-          output: 'trivy-results.sarif, trivy.txt'
+          output: 'trivy-results.sarif'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
 
